ci/cd: add aliasing tests to ci

--- a/.github/workflows/tests_clang_windows.yml
+++ b/.github/workflows/tests_clang_windows.yml
@@ -13,6 +13,11 @@ jobs:
           .\bin\julec --compiler clang -o test tests/std
           ./test
 
+      - name: Test - Aliasing
+        run: |
+          .\bin\julec --compiler clang -o test tests/aliasing
+          ./test
+
       - name: Test - Arrays
         run: |
           .\bin\julec --compiler clang -o test tests/arrays
