--- a/.github/workflows/tests_clang_macos.yml
+++ b/.github/workflows/tests_clang_macos.yml
@@ -13,6 +13,11 @@ jobs:
           julec --compiler clang -o test tests/std
           ./test
 
+      - name: Test - Aliasing
+        run: |
+          julec --compiler clang -o test tests/aliasing
+          ./test
+
       - name: Test - Arrays
         run: |
           julec --compiler clang -o test tests/arrays
