--- a/.github/workflows/tests_gcc_macos.yml
+++ b/.github/workflows/tests_gcc_macos.yml
@@ -14,6 +14,12 @@ jobs:
           g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
+      - name: Test - Aliasing
+        run: |
+          julec --compiler gcc --compiler-path g++-13 -o test -t tests/aliasing
+          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          ./test
+
       - name: Test - Arrays
         run: |
           julec --compiler gcc --compiler-path g++-13 -o test -t tests/arrays
