--- a/.github/workflows/tests_gcc_windows.yml
+++ b/.github/workflows/tests_gcc_windows.yml
@@ -13,6 +13,11 @@ jobs:
           .\bin\julec --compiler gcc -o test tests/std
           ./test
 
+      - name: Test - Aliasing
+        run: |
+          .\bin\julec --compiler gcc -o test tests/aliasing
+          ./test
+
       - name: Test - Arrays
         run: |
           .\bin\julec --compiler gcc -o test tests/arrays
