--- a/.github/workflows/std_tests_clang_ubuntu.yml
+++ b/.github/workflows/std_tests_clang_ubuntu.yml
@@ -8,6 +8,11 @@ jobs:
       - uses: actions/checkout@v4
       - uses: julelang/ci@main
 
+      - name: Test - std/bufio
+        run: |
+          julec test --compiler clang -o test std/bufio
+          ./test
+
       - name: Test - std/internal/conv
         run: |
           julec test --compiler clang -o test std/internal/conv
