--- a/.github/workflows/std_tests_gcc_windows.yml
+++ b/.github/workflows/std_tests_gcc_windows.yml
@@ -8,6 +8,11 @@ jobs:
       - uses: actions/checkout@v4
       - uses: julelang/ci@main
 
+      - name: Test - std/bufio
+        run: |
+          .\bin\julec test --compiler gcc -o test std/bufio
+          ./test
+
       - name: Test - std/internal/conv
         run: |
           .\bin\julec test --compiler gcc -o test std/internal/conv
