std/internal: rename the fastbytes package as litebytes

--- a/.github/workflows/std_tests_clang_windows.yml
+++ b/.github/workflows/std_tests_clang_windows.yml
@@ -18,9 +18,9 @@ jobs:
           .\bin\julec test --compiler clang -o test std/internal/conv
           ./test
 
-      - name: Test - std/internal/fastbytes
+      - name: Test - std/internal/litebytes
         run: |
-          .\bin\julec test --compiler clang -o test std/internal/fastbytes
+          .\bin\julec test --compiler clang -o test std/internal/litebytes
           ./test
 
       - name: Test - std/encoding/ascii85
