--- a/.github/workflows/std_tests_gcc_ubuntu.yml
+++ b/.github/workflows/std_tests_gcc_ubuntu.yml
@@ -18,9 +18,9 @@ jobs:
           julec test --compiler gcc -o test std/internal/conv
           ./test
 
-      - name: Test - std/internal/fastbytes
+      - name: Test - std/internal/litebytes
         run: |
-          julec test --compiler gcc -o test std/internal/fastbytes
+          julec test --compiler gcc -o test std/internal/litebytes
           ./test
 
       - name: Test - std/encoding/ascii85
