--- a/.github/workflows/std_tests_gcc_macos.yml
+++ b/.github/workflows/std_tests_gcc_macos.yml
@@ -20,9 +20,9 @@ jobs:
           g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
-      - name: Test - std/internal/fastbytes
+      - name: Test - std/internal/litebytes
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/internal/fastbytes
+          julec test --compiler gcc --compiler-path g++-13 -o test -t std/internal/litebytes
           g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
