--- a/.github/workflows/std_tests_clang_macos.yml
+++ b/.github/workflows/std_tests_clang_macos.yml
@@ -78,6 +78,11 @@ jobs:
           julec test --compiler clang -o test std/slices
           ./test
 
+      - name: Test - std/time
+        run: |
+          julec test --compiler clang -o test std/time
+          ./test
+
       - name: Test - std/unicode::utf8
         run: |
           julec test --compiler clang -o test std/unicode/utf8/test
