--- a/.github/workflows/std_tests_gcc_macos.yml
+++ b/.github/workflows/std_tests_gcc_macos.yml
@@ -14,15 +14,15 @@ jobs:
           g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
-      - name: Test - std/internal/conv
+      - name: Test - std/internal/byteslite
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/internal/conv
+          julec test --compiler gcc --compiler-path g++-13 -o test -t std/internal/byteslite
           g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
-      - name: Test - std/internal/litebytes
+      - name: Test - std/internal/conv
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/internal/litebytes
+          julec test --compiler gcc --compiler-path g++-13 -o test -t std/internal/conv
           g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
