--- a/.github/workflows/std_tests_clang_ubuntu.yml
+++ b/.github/workflows/std_tests_clang_ubuntu.yml
@@ -13,14 +13,14 @@ jobs:
           julec test --compiler clang -o test std/bufio
           ./test
 
+      - name: Test - std/internal/byteslite
+        run: |
+          julec test --compiler clang -o test std/internal/byteslite
+          ./test
+
       - name: Test - std/internal/conv
         run: |
           julec test --compiler clang -o test std/internal/conv
-          ./test
-
-      - name: Test - std/internal/litebytes
-        run: |
-          julec test --compiler clang -o test std/internal/litebytes
           ./test
 
       - name: Test - std/encoding/ascii85
