--- a/.github/workflows/std_tests_gcc_windows.yml
+++ b/.github/workflows/std_tests_gcc_windows.yml
@@ -13,14 +13,14 @@ jobs:
           .\bin\julec test --compiler gcc -o test std/bufio
           ./test
 
+      - name: Test - std/internal/byteslite
+        run: |
+          .\bin\julec test --compiler gcc -o test std/internal/byteslite
+          ./test
+
       - name: Test - std/internal/conv
         run: |
           .\bin\julec test --compiler gcc -o test std/internal/conv
-          ./test
-
-      - name: Test - std/internal/litebytes
-        run: |
-          .\bin\julec test --compiler gcc -o test std/internal/litebytes
           ./test
 
       - name: Test - std/encoding/ascii85
