--- a/.github/workflows/std_tests_gcc_windows.yml
+++ b/.github/workflows/std_tests_gcc_windows.yml
@@ -78,6 +78,11 @@ jobs:
           .\bin\julec test --compiler gcc -o test std/slices
           ./test
 
+      - name: Test - std/sync
+        run: |
+          .\bin\julec test --compiler gcc -o test std/sync
+          ./test
+
       - name: Test - std/time
         run: |
           .\bin\julec test --compiler gcc -o test std/time
