--- a/.github/workflows/std_tests_clang_ubuntu.yml
+++ b/.github/workflows/std_tests_clang_ubuntu.yml
@@ -78,6 +78,11 @@ jobs:
           julec test --compiler clang -o test std/slices
           ./test
 
+      - name: Test - std/sync
+        run: |
+          julec test --compiler clang -o test std/sync
+          ./test
+
       - name: Test - std/time
         run: |
           julec test --compiler clang -o test std/time
