--- a/.github/workflows/tests_clang_ubuntu.yml
+++ b/.github/workflows/tests_clang_ubuntu.yml
@@ -27,6 +27,11 @@ jobs:
         run: |
           julec --compiler clang -o test tests/basic_calculator
 
+      - name: Test - Channels
+        run: |
+          julec --compiler clang -o test tests/channels
+          ./test
+
       - name: Test - Comptime
         run: |
           julec --compiler clang -o test tests/comptime
