--- a/.github/workflows/tests_clang_windows.yml
+++ b/.github/workflows/tests_clang_windows.yml
@@ -27,6 +27,11 @@ jobs:
         run: |
           .\bin\julec --compiler clang -o test tests/basic_calculator
 
+      - name: Test - Channels
+        run: |
+          .\bin\julec --compiler clang -o test tests/channels
+          ./test
+
       - name: Test - Comptime
         run: |
           .\bin\julec --compiler clang -o test tests/comptime
