--- a/.github/workflows/tests_gcc_macos.yml
+++ b/.github/workflows/tests_gcc_macos.yml
@@ -31,6 +31,12 @@ jobs:
           julec --compiler gcc --compiler-path g++-13 -o test -t tests/basic_calculator
           g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
 
+      - name: Test - Channels
+        run: |
+          julec --compiler gcc --compiler-path g++-13 -o test -t tests/channels
+          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          ./test
+
       - name: Test - Comptime
         run: |
           julec --compiler gcc --compiler-path g++-13 -o test -t tests/comptime
