--- a/.github/workflows/std_tests_gcc_macos.yml
+++ b/.github/workflows/std_tests_gcc_macos.yml
@@ -16,13 +16,13 @@ jobs:
 
       - name: Test - std/internal/byteslite
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/internal/byteslite
+          julec test --compiler gcc --compiler-path g++-13 -o test -t std/internal/byteslite/test
           g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/internal/conv
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/internal/conv
+          julec test --compiler gcc --compiler-path g++-13 -o test -t std/internal/conv/test
           g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
