--- a/.github/workflows/std_tests_clang_ubuntu.yml
+++ b/.github/workflows/std_tests_clang_ubuntu.yml
@@ -15,12 +15,12 @@ jobs:
 
       - name: Test - std/internal/byteslite
         run: |
-          julec test --compiler clang -o test std/internal/byteslite
+          julec test --compiler clang -o test std/internal/byteslite/test
           ./test
 
       - name: Test - std/internal/conv
         run: |
-          julec test --compiler clang -o test std/internal/conv
+          julec test --compiler clang -o test std/internal/conv/test
           ./test
 
       - name: Test - std/encoding/ascii85
