--- a/.github/workflows/std_tests_gcc_windows.yml
+++ b/.github/workflows/std_tests_gcc_windows.yml
@@ -15,12 +15,12 @@ jobs:
 
       - name: Test - std/internal/byteslite
         run: |
-          .\bin\julec test --compiler gcc -o test std/internal/byteslite
+          .\bin\julec test --compiler gcc -o test std/internal/byteslite/test
           ./test
 
       - name: Test - std/internal/conv
         run: |
-          .\bin\julec test --compiler gcc -o test std/internal/conv
+          .\bin\julec test --compiler gcc -o test std/internal/conv/test
           ./test
 
       - name: Test - std/encoding/ascii85
