ci/cd: add std/path tests to std test CI

--- a/.github/workflows/std_tests_clang_windows.yml
+++ b/.github/workflows/std_tests_clang_windows.yml
@@ -73,6 +73,11 @@ jobs:
           .\bin\julec test --compiler clang -o test std/net
           ./test
 
+      - name: Test - std/path
+        run: |
+          .\bin\julec test --compiler clang -o test std/path
+          ./test
+
       - name: Test - std/slices
         run: |
           .\bin\julec test --compiler clang -o test std/slices
