--- a/.github/workflows/std_tests_clang_macos.yml
+++ b/.github/workflows/std_tests_clang_macos.yml
@@ -73,6 +73,11 @@ jobs:
           julec test --compiler clang -o test std/net
           ./test
 
+      - name: Test - std/path
+        run: |
+          julec test --compiler clang -o test std/path
+          ./test
+
       - name: Test - std/slices
         run: |
           julec test --compiler clang -o test std/slices
