--- a/.github/workflows/std_tests_gcc_macos.yml
+++ b/.github/workflows/std_tests_gcc_macos.yml
@@ -86,6 +86,12 @@ jobs:
           g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
+      - name: Test - std/path
+        run: |
+          julec test --compiler gcc --compiler-path g++-13 -o test -t std/path
+          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          ./test
+
       - name: Test - std/slices
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/slices
