ci: remove 'datas' and 'Datas' from typo-check ignore list

--- a/_typos.toml
+++ b/_typos.toml
@@ -1,6 +1,6 @@
 [default]
 extend-ignore-identifiers-re = [
-    "datas", "Datas", "ue", "nd", "lok", "Thm",
+    "ue", "nd", "lok", "Thm",
     "sur", "leasure", "asure", "nulll", "finf",
     "iy", "ERROR_FILENAME_EXCED_RANGE", "FLE",
     "nam", "ND", "eisDST", "inh", "Vai", "VAI",
