std: fix cutted spellcheck and remove from spellcheck ignore list

--- a/_typos.toml
+++ b/_typos.toml
@@ -4,5 +4,5 @@ extend-ignore-identifiers-re = [
     "sur", "leasure", "asure", "nulll", "finf",
     "iy", "ERROR_FILENAME_EXCED_RANGE", "FLE",
     "nam", "ND", "eisDST", "inh", "Vai", "VAI",
-    "fo", "hel", "IST", "Commun", "cutted"
+    "fo", "hel", "IST", "Commun"
 ]
