--- a/.github/workflows/std_tests_gcc_macos.yml
+++ b/.github/workflows/std_tests_gcc_macos.yml
@@ -62,6 +62,12 @@ jobs:
           g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
+      - name: Test - std/html
+        run: |
+          julec test --compiler gcc --compiler-path g++-13 -o test -t std/html
+          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          ./test
+
       - name: Test - std/maps
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/maps
