--- a/.github/workflows/std_tests_gcc_windows.yml
+++ b/.github/workflows/std_tests_gcc_windows.yml
@@ -53,6 +53,11 @@ jobs:
           .\bin\julec test --compiler gcc -o test std/hash/fnv
           ./test
 
+      - name: Test - std/html
+        run: |
+          .\bin\julec test --compiler gcc -o test std/html
+          ./test
+
       - name: Test - std/maps
         run: |
           .\bin\julec test --compiler gcc -o test std/maps
