--- a/_typos.toml
+++ b/_typos.toml
@@ -4,5 +4,7 @@ extend-ignore-identifiers-re = [
     "sur", "leasure", "asure", "nulll", "finf",
     "iy", "ERROR_FILENAME_EXCED_RANGE", "FLE",
     "nam", "ND", "eisDST", "inh", "Vai", "VAI",
-    "fo", "hel", "IST", "Commun"
+    "fo", "hel", "IST", "Commun", "Ofr", "becaus",
+    "curren", "infintie", "ofr", "olt", "pluse",
+    "pointint", "lates"
 ]
