--- a/_typos.toml
+++ b/_typos.toml
@@ -1,3 +1,5 @@
+# This TOML file used by the julelang/jule and julelang/manual repositories.
+# Configuration is common.
 [default]
 extend-ignore-identifiers-re = [
     "ue", "nd", "lok", "Thm",
@@ -6,5 +8,5 @@ extend-ignore-identifiers-re = [
     "nam", "ND", "eisDST", "inh", "Vai", "VAI",
     "fo", "hel", "IST", "Commun", "Ofr", "becaus",
     "curren", "infintie", "ofr", "olt", "pluse",
-    "pointint", "lates"
+    "pointint", "lates", "isuses"
 ]
