--- a/.github/workflows/std_tests_gcc_windows.yml
+++ b/.github/workflows/std_tests_gcc_windows.yml
@@ -78,6 +78,11 @@ jobs:
           .\bin\julec test --compiler gcc -o test std/net
           ./test
 
+      - name: Test - std/net/url
+        run: |
+          .\bin\julec test --compiler gcc -o test std/net/url
+          ./test
+
       - name: Test - std/path
         run: |
           .\bin\julec test --compiler gcc -o test std/path
