chore(ci): add `concurrency` to CIs
this prevents 50 CIs running at the same time for the same branch

Signed-off-by: Adam Perkowski <adas1per@protonmail.com>

--- a/.github/workflows/std_tests_clang_ubuntu.yml
+++ b/.github/workflows/std_tests_clang_ubuntu.yml
@@ -1,6 +1,10 @@
 name: Std Tests [Clang] - Ubuntu
 on: [push, pull_request]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build-and-exec:
     runs-on: ubuntu-latest
