--- a/.github/workflows/build_clang_macos.yml
+++ b/.github/workflows/build_clang_macos.yml
@@ -1,5 +1,10 @@
 name: Build [Clang] - macOS
 on: [push, pull_request]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: macOS-latest
