--- a/.github/workflows/build_cpp14.yml
+++ b/.github/workflows/build_cpp14.yml
@@ -1,5 +1,10 @@
 name: Build - C++14
 on: [push, pull_request]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
