--- a/.github/workflows/build_cpp20.yml
+++ b/.github/workflows/build_cpp20.yml
@@ -1,5 +1,10 @@
 name: Build - C++20
 on: [push, pull_request]
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
