--- a/.github/workflows/tests_clang_windows.yml
+++ b/.github/workflows/tests_clang_windows.yml
@@ -1,6 +1,10 @@
 name: Tests [Clang] - Windows
 on: [push, pull_request]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build-and-exec:
     runs-on: windows-latest
