--- a/.github/workflows/typos.yml
+++ b/.github/workflows/typos.yml
@@ -1,5 +1,9 @@
 name: Check typos
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   push:
     branches: ["master"]
