tests: add tests for dynamic types

--- a/.github/workflows/tests_clang_macos.yml
+++ b/.github/workflows/tests_clang_macos.yml
@@ -46,6 +46,11 @@ jobs:
           julec --compiler clang -o test tests/concurrency
           ./test
 
+      - name: Test - Dynamic
+        run: |
+          julec --compiler clang -o test tests/dynamic
+          ./test
+
       - name: Test - Exceptionals
         run: |
           julec --compiler clang -o test tests/exceptionals
