--- a/.github/workflows/tests_gcc_windows.yml
+++ b/.github/workflows/tests_gcc_windows.yml
@@ -46,6 +46,11 @@ jobs:
           .\bin\julec --compiler gcc -o test tests/concurrency
           ./test
 
+      - name: Test - Dynamic
+        run: |
+          .\bin\julec --compiler gcc -o test tests/dynamic
+          ./test
+
       - name: Test - Exceptionals
         run: |
           .\bin\julec --compiler gcc -o test tests/exceptionals
