--- a/.github/workflows/tests_gcc_macos.yml
+++ b/.github/workflows/tests_gcc_macos.yml
@@ -53,6 +53,12 @@ jobs:
           g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
+      - name: Test - Dynamic
+        run: |
+          julec --compiler gcc --compiler-path g++-13 -o test -t tests/dynamic
+          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          ./test
+
       - name: Test - Exceptionals
         run: |
           julec --compiler gcc --compiler-path g++-13 -o test -t tests/exceptionals
