ci/cd: add std/io tests to std test CI

--- a/.github/workflows/std_tests_clang_macos.yml
+++ b/.github/workflows/std_tests_clang_macos.yml
@@ -57,6 +57,11 @@ jobs:
           julec test --compiler clang -o test std/hash/fnv
           ./test
 
+      - name: Test - std/io/test
+        run: |
+          julec test --compiler clang -o test std/io/test
+          ./test
+
       - name: Test - std/maps
         run: |
           julec test --compiler clang -o test std/maps
