--- a/.github/workflows/std_tests_clang_ubuntu.yml
+++ b/.github/workflows/std_tests_clang_ubuntu.yml
@@ -62,6 +62,11 @@ jobs:
           julec test --compiler clang -o test std/html
           ./test
 
+      - name: Test - std/io
+        run: |
+          julec test --compiler clang -o test std/io/test
+          ./test
+
       - name: Test - std/maps
         run: |
           julec test --compiler clang -o test std/maps
