--- a/.github/workflows/std_tests_gcc_ubuntu.yml
+++ b/.github/workflows/std_tests_gcc_ubuntu.yml
@@ -58,6 +58,11 @@ jobs:
           julec test --compiler gcc -o test std/html
           ./test
 
+      - name: Test - std/io
+        run: |
+          julec test --compiler gcc -o test std/io/test
+          ./test
+
       - name: Test - std/maps
         run: |
           julec test --compiler gcc -o test std/maps
