std/ci: add missing std/html test to clang-macos CI

--- a/.github/workflows/std_tests_clang_macos.yml
+++ b/.github/workflows/std_tests_clang_macos.yml
@@ -57,7 +57,12 @@ jobs:
           julec test --compiler clang -o test std/hash/fnv
           ./test
 
-      - name: Test - std/io/test
+      - name: Test - std/html
+        run: |
+          julec test --compiler clang -o test std/html
+          ./test
+
+      - name: Test - std/io
         run: |
           julec test --compiler clang -o test std/io/test
           ./test
