--- a/.github/workflows/std_tests_gcc_windows.yml
+++ b/.github/workflows/std_tests_gcc_windows.yml
@@ -88,6 +88,11 @@ jobs:
           .\bin\julec test --compiler gcc -o test std/net/url
           ./test
 
+      - name: Test - std/os
+        run: |
+          .\bin\julec test --compiler gcc -o test std/os/test
+          ./test
+
       - name: Test - std/path
         run: |
           .\bin\julec test --compiler gcc -o test std/path
