--- a/.github/workflows/std_tests_clang_ubuntu.yml
+++ b/.github/workflows/std_tests_clang_ubuntu.yml
@@ -104,12 +104,12 @@ jobs:
 
       - name: Test - std/sync
         run: |
-          julec test --compiler clang -o test std/sync
+          julec test --compiler clang -o test std/sync/test
           ./test
 
       - name: Test - std/time
         run: |
-          julec test --compiler clang -o test std/time
+          julec test --compiler clang -o test std/time/test
           ./test
 
       - name: Test - std/unicode/utf8
