--- a/.github/workflows/std_tests_clang_windows.yml
+++ b/.github/workflows/std_tests_clang_windows.yml
@@ -109,12 +109,12 @@ jobs:
 
       - name: Test - std/sync
         run: |
-          .\bin\julec test --compiler clang -o test std/sync
+          .\bin\julec test --compiler clang -o test std/sync/test
           ./test
 
       - name: Test - std/time
         run: |
-          .\bin\julec test --compiler clang -o test std/time
+          .\bin\julec test --compiler clang -o test std/time/test
           ./test
 
       - name: Test - std/unicode/utf8
