--- a/.github/workflows/std_tests_gcc_macos.yml
+++ b/.github/workflows/std_tests_gcc_macos.yml
@@ -122,13 +122,13 @@ jobs:
 
       - name: Test - std/sync
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/sync
+          julec test --compiler gcc --compiler-path g++-13 -o test -t std/sync/test
           g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/time
         run: |
-          julec test --compiler gcc --compiler-path g++-13 -o test -t std/time
+          julec test --compiler gcc --compiler-path g++-13 -o test -t std/time/test
           g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
