--- a/.github/workflows/std_tests_gcc_ubuntu.yml
+++ b/.github/workflows/std_tests_gcc_ubuntu.yml
@@ -100,12 +100,12 @@ jobs:
 
       - name: Test - std/sync
         run: |
-          julec test --compiler gcc -o test std/sync
+          julec test --compiler gcc -o test std/sync/test
           ./test
 
       - name: Test - std/time
         run: |
-          julec test --compiler gcc -o test std/time
+          julec test --compiler gcc -o test std/time/test
           ./test
 
       - name: Test - std/unicode/utf8
