--- a/.github/workflows/std_tests_gcc_windows.yml
+++ b/.github/workflows/std_tests_gcc_windows.yml
@@ -105,12 +105,12 @@ jobs:
 
       - name: Test - std/sync
         run: |
-          .\bin\julec test --compiler gcc -o test std/sync
+          .\bin\julec test --compiler gcc -o test std/sync/test
           ./test
 
       - name: Test - std/time
         run: |
-          .\bin\julec test --compiler gcc -o test std/time
+          .\bin\julec test --compiler gcc -o test std/time/test
           ./test
 
       - name: Test - std/unicode/utf8
