std/conv: add ErrSyntax, Quote, AppendQuote, QuoteToASCII, AppendQuoteToASCII, QuoteToGraphic, AppendQuoteToGraphic, QuoteRune, AppendQuoteRune, QuoteRuneToASCII, AppendQuoteRuneToASCII, QuoteRuneToGraphic, AppendQuoteRuneToGraphic, CanBackquote, UnquoteChar, QuotedPrefix, Unquote, IsGraphic

--- a/.github/workflows/std_tests_clang_windows.yml
+++ b/.github/workflows/std_tests_clang_windows.yml
@@ -17,6 +17,11 @@ jobs:
           .\bin\julec test --compiler clang -o test std/bufio
           ./test
 
+      - name: Test - std/conv
+        run: |
+          .\bin\julec test --compiler clang -o test std/conv/test
+          ./test
+
       - name: Test - std/internal/byteslite
         run: |
           .\bin\julec test --compiler clang -o test std/internal/byteslite/test
