--- a/.github/workflows/std_tests_clang_macos.yml
+++ b/.github/workflows/std_tests_clang_macos.yml
@@ -17,6 +17,11 @@ jobs:
           julec test --compiler clang -o test std/bufio
           ./test
 
+      - name: Test - std/conv
+        run: |
+          julec test --compiler clang -o test std/conv/test
+          ./test
+
       - name: Test - std/internal/byteslite
         run: |
           julec test --compiler clang -o test std/internal/byteslite/test
