--- a/.github/workflows/std_tests_gcc_windows.yml
+++ b/.github/workflows/std_tests_gcc_windows.yml
@@ -13,6 +13,11 @@ jobs:
           .\bin\julec test --compiler gcc -o test std/bufio
           ./test
 
+      - name: Test - std/conv
+        run: |
+          .\bin\julec test --compiler gcc -o test std/conv/test
+          ./test
+
       - name: Test - std/internal/byteslite
         run: |
           .\bin\julec test --compiler gcc -o test std/internal/byteslite/test
