ci/cd: add std/bytes tests to CI

--- a/.github/workflows/std_tests_clang_macos.yml
+++ b/.github/workflows/std_tests_clang_macos.yml
@@ -17,6 +17,11 @@ jobs:
           julec test --compiler clang -o test std/bufio
           ./test
 
+      - name: Test - std/bytes
+        run: |
+          julec test --compiler clang -o test std/bytes
+          ./test
+
       - name: Test - std/conv
         run: |
           julec test --compiler clang -o test std/conv/test
@@ -105,6 +110,11 @@ jobs:
       - name: Test - std/slices
         run: |
           julec test --compiler clang -o test std/slices
+          ./test
+
+      - name: Test - std/strings
+        run: |
+          julec test --compiler clang -o test std/strings/test
           ./test
 
       - name: Test - std/sync
