--- a/.github/workflows/std_tests_clang_windows.yml
+++ b/.github/workflows/std_tests_clang_windows.yml
@@ -17,6 +17,11 @@ jobs:
           .\bin\julec test --compiler clang -o test std/bufio
           ./test
 
+      - name: Test - std/bytes
+        run: |
+          .\bin\julec test --compiler clang -o test std/bytes
+          ./test
+
       - name: Test - std/conv
         run: |
           .\bin\julec test --compiler clang -o test std/conv/test
@@ -110,6 +115,11 @@ jobs:
       - name: Test - std/slices
         run: |
           .\bin\julec test --compiler clang -o test std/slices
+          ./test
+
+      - name: Test - std/strings
+        run: |
+          .\bin\julec test --compiler clang -o test std/strings/test
           ./test
 
       - name: Test - std/sync
