--- a/.github/workflows/std_tests_gcc_macos.yml
+++ b/.github/workflows/std_tests_gcc_macos.yml
@@ -18,6 +18,12 @@ jobs:
           g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
+      - name: Test - std/bytes
+        run: |
+          julec test --compiler gcc --compiler-path g++-13 -o test -t std/bytes
+          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          ./test
+
       - name: Test - std/conv
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/conv/test
@@ -123,6 +129,12 @@ jobs:
       - name: Test - std/slices
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/slices
+          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          ./test
+
+      - name: Test - std/strings
+        run: |
+          julec test --compiler gcc --compiler-path g++-13 -o test -t std/strings/test
           g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
