--- a/.github/workflows/std_tests_gcc_ubuntu.yml
+++ b/.github/workflows/std_tests_gcc_ubuntu.yml
@@ -13,6 +13,11 @@ jobs:
           julec test --compiler gcc -o test std/bufio
           ./test
 
+      - name: Test - std/bytes
+        run: |
+          julec test --compiler gcc -o test std/bytes
+          ./test
+
       - name: Test - std/conv
         run: |
           julec test --compiler gcc -o test std/conv/test
@@ -101,6 +106,11 @@ jobs:
       - name: Test - std/slices
         run: |
           julec test --compiler gcc -o test std/slices
+          ./test
+
+      - name: Test - std/strings
+        run: |
+          julec test --compiler gcc -o test std/strings/test
           ./test
 
       - name: Test - std/sync
