--- a/.github/workflows/std_tests_gcc_windows.yml
+++ b/.github/workflows/std_tests_gcc_windows.yml
@@ -13,6 +13,11 @@ jobs:
           .\bin\julec test --compiler gcc -o test std/bufio
           ./test
 
+      - name: Test - std/bytes
+        run: |
+          .\bin\julec test --compiler gcc -o test std/bytes
+          ./test
+
       - name: Test - std/conv
         run: |
           .\bin\julec test --compiler gcc -o test std/conv/test
@@ -106,6 +111,11 @@ jobs:
       - name: Test - std/slices
         run: |
           .\bin\julec test --compiler gcc -o test std/slices
+          ./test
+
+      - name: Test - std/strings
+        run: |
+          .\bin\julec test --compiler gcc -o test std/strings/test
           ./test
 
       - name: Test - std/sync
