ci/cd: add the 'infinit' keyword to igore list for typo checker

--- a/_typos.toml
+++ b/_typos.toml
@@ -8,5 +8,5 @@ extend-ignore-identifiers-re = [
     "nam", "ND", "eisDST", "inh", "Vai", "VAI",
     "fo", "hel", "IST", "Commun", "Ofr", "becaus",
     "curren", "infintie", "ofr", "olt", "pluse",
-    "pointint", "lates", "isuses"
+    "pointint", "lates", "isuses", "infinit"
 ]
