tests: add tests for integer wrap around behavior

--- a/.github/workflows/tests_clang_ubuntu.yml
+++ b/.github/workflows/tests_clang_ubuntu.yml
@@ -90,3 +90,8 @@ jobs:
         run: |
           julec --compiler clang -o test tests/traits
           ./test
+
+      - name: Test - Wrap Around
+        run: |
+          julec --compiler clang -po test tests/wraparound
+          ./test
