--- a/.github/workflows/tests_clang_windows.yml
+++ b/.github/workflows/tests_clang_windows.yml
@@ -90,3 +90,8 @@ jobs:
         run: |
           .\bin\julec --compiler clang -o test tests/traits
           ./test
+
+      - name: Test - Wrap Around
+        run: |
+          .\bin\julec --compiler clang -po test tests/wraparound
+          ./test
