--- a/.github/workflows/tests_gcc_macos.yml
+++ b/.github/workflows/tests_gcc_macos.yml
@@ -106,3 +106,9 @@ jobs:
           julec --compiler gcc --compiler-path g++-13 -o test -t tests/traits
           g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
+
+      - name: Test - Wrap Around
+        run: |
+          julec --compiler gcc --compiler-path g++-13 -po test -t tests/wraparound
+          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          ./test
