--- a/.github/workflows/tests_gcc_windows.yml
+++ b/.github/workflows/tests_gcc_windows.yml
@@ -90,3 +90,8 @@ jobs:
         run: |
           .\bin\julec --compiler gcc -o test tests/traits
           ./test
+
+      - name: Test - Wrap Around
+        run: |
+          .\bin\julec --compiler gcc -po test tests/wraparound
+          ./test
