ci/cd: update CI commands to latest compiler commands of julec

--- a/.github/workflows/tests_gcc_macos.yml
+++ b/.github/workflows/tests_gcc_macos.yml
@@ -15,100 +15,100 @@ jobs:
       - name: Test - Standard Library
         run: |
           julec --compiler gcc --compiler-path g++-13 -o test -t tests/std
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - Aliasing
         run: |
           julec --compiler gcc --compiler-path g++-13 -o test -t tests/aliasing
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - Arrays
         run: |
           julec --compiler gcc --compiler-path g++-13 -o test -t tests/arrays
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - Basic Calculator
         run: |
           julec --compiler gcc --compiler-path g++-13 -o test -t tests/basic_calculator
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
 
       - name: Test - Channels
         run: |
           julec --compiler gcc --compiler-path g++-13 -o test -t tests/channels
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - Comptime
         run: |
           julec --compiler gcc --compiler-path g++-13 -o test -t tests/comptime
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - Concurrency
         run: |
           julec --compiler gcc --compiler-path g++-13 -o test -t tests/concurrency
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - Dynamic
         run: |
           julec --compiler gcc --compiler-path g++-13 -o test -t tests/dynamic
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - Exceptionals
         run: |
           julec --compiler gcc --compiler-path g++-13 -o test -t tests/exceptionals
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - Generics
         run: |
           julec --compiler gcc --compiler-path g++-13 -o test -t tests/generics
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - Levenshtein Distance
         run: |
           julec --compiler gcc --compiler-path g++-13 -o test -t tests/levenshtein_distance
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - Maps
         run: |
           julec --compiler gcc --compiler-path g++-13 -o test -t tests/maps
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - QuickSort
         run: |
           julec --compiler gcc --compiler-path g++-13 -o test -t tests/quicksort
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - Sleep
         run: |
           julec --compiler gcc --compiler-path g++-13 -o test -t tests/sleep
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - Syntax
         run: |
           julec --compiler gcc --compiler-path g++-13 -o test -t tests/syntax
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - Traits
         run: |
           julec --compiler gcc --compiler-path g++-13 -o test -t tests/traits
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - Wrap Around
         run: |
           julec --compiler gcc --compiler-path g++-13 -po test -t tests/wraparound
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
