--- a/.github/workflows/std_tests_gcc_macos.yml
+++ b/.github/workflows/std_tests_gcc_macos.yml
@@ -15,149 +15,149 @@ jobs:
       - name: Test - std/bufio
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/bufio
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/bytes
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/bytes
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/conv
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/conv/test
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/internal/byteslite
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/internal/byteslite/test
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/internal/conv
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/internal/conv/test
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/encoding/ascii85
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/encoding/ascii85
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/encoding/base32
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/encoding/base32
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/encoding/base64
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/encoding/base64
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/encoding/json
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/encoding/json
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/hash/adler32
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/hash/adler32
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/hash/fnv
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/hash/fnv
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/html
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/html
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/io
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/io/test
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/maps
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/maps
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/math/big
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/math/big
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/math/cmplx
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/math/cmplx
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/net
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/net
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/net/url
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/net/url
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/path
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/path
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/slices
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/slices
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/strings
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/strings/test
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/sync
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/sync/test
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/time
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/time/test
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/unicode/utf8
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/unicode/utf8/test
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
       - name: Test - std/unicode/utf16
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/unicode/utf16/test
-          g++-13 -w --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
