--- a/.github/workflows/std_tests_clang_windows.yml
+++ b/.github/workflows/std_tests_clang_windows.yml
@@ -87,6 +87,11 @@ jobs:
           .\bin\julec test --compiler clang -o test std/math/big
           ./test
 
+      - name: Test - std/math/bits
+        run: |
+          .\bin\julec test --compiler clang -o test std/math/bits/test
+          ./test
+
       - name: Test - std/math/cmplx
         run: |
           .\bin\julec test --compiler clang -o test std/math/cmplx
