--- a/.github/workflows/std_tests_gcc_macos.yml
+++ b/.github/workflows/std_tests_gcc_macos.yml
@@ -102,6 +102,12 @@ jobs:
           g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
+      - name: Test - std/math/bits
+        run: |
+          julec test --compiler gcc --compiler-path g++-13 -o test -t std/math/bits/test
+          g++-13 -w -fwrapv --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          ./test
+
       - name: Test - std/math/cmplx
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/math/cmplx
