--- a/.github/workflows/std_tests_gcc_ubuntu.yml
+++ b/.github/workflows/std_tests_gcc_ubuntu.yml
@@ -83,6 +83,11 @@ jobs:
           julec test --compiler gcc -o test std/math/big
           ./test
 
+      - name: Test - std/math/bits
+        run: |
+          julec test --compiler gcc -o test std/math/bits/test
+          ./test
+
       - name: Test - std/math/cmplx
         run: |
           julec test --compiler gcc -o test std/math/cmplx
