--- a/.github/workflows/std_tests_gcc_windows.yml
+++ b/.github/workflows/std_tests_gcc_windows.yml
@@ -83,6 +83,11 @@ jobs:
           .\bin\julec test --compiler gcc -o test std/math/big
           ./test
 
+      - name: Test - std/math/bits
+        run: |
+          .\bin\julec test --compiler gcc -o test std/math/bits/test
+          ./test
+
       - name: Test - std/math/cmplx
         run: |
           .\bin\julec test --compiler gcc -o test std/math/cmplx
