ci/cd: update compile command to latest

--- a/.github/workflows/build_gcc_windows.yml
+++ b/.github/workflows/build_gcc_windows.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Build JuleC
         run: |
           .\bin\julec -t --compiler gcc src/julec
-          g++ -w -fwrapv --std=c++17 -O0 "-Wa,-mbig-obj" -o test dist/ir.cpp -lws2_32 -lshell32
+          g++ -w -fwrapv -ffloat-store --std=c++17 -O0 "-Wa,-mbig-obj" -o test dist/ir.cpp -lws2_32 -lshell32
