std/encoding/csv: add tests

--- a/.github/workflows/std_tests_gcc_macos.yml
+++ b/.github/workflows/std_tests_gcc_macos.yml
@@ -60,6 +60,12 @@ jobs:
           g++-13 -w -fwrapv -ffloat-store --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
+      - name: Test - std/encoding/csv
+        run: |
+          julec test --compiler gcc --compiler-path g++-13 -o test -t std/encoding/csv
+          g++-13 -w -fwrapv -ffloat-store --std=c++17 -O0 -Wl,-ld_classic -o test dist/ir.cpp
+          ./test
+
       - name: Test - std/encoding/json
         run: |
           julec test --compiler gcc --compiler-path g++-13 -o test -t std/encoding/json
