--- a/.github/workflows/std_tests_clang_macos.yml
+++ b/.github/workflows/std_tests_clang_macos.yml
@@ -52,6 +52,11 @@ jobs:
           julec test --compiler clang -o test std/encoding/base64
           ./test
 
+      - name: Test - std/encoding/csv
+        run: |
+          julec test --compiler clang -o test std/encoding/csv
+          ./test
+
       - name: Test - std/encoding/json
         run: |
           julec test --compiler clang -o test std/encoding/json
