--- a/.github/workflows/std_tests_gcc_ubuntu.yml
+++ b/.github/workflows/std_tests_gcc_ubuntu.yml
@@ -48,6 +48,11 @@ jobs:
           julec test --compiler gcc -o test std/encoding/base64
           ./test
 
+      - name: Test - std/encoding/csv
+        run: |
+          julec test --compiler gcc -o test std/encoding/csv
+          ./test
+
       - name: Test - std/encoding/json
         run: |
           julec test --compiler gcc -o test std/encoding/json
