--- a/.github/workflows/std_tests_gcc_windows.yml
+++ b/.github/workflows/std_tests_gcc_windows.yml
@@ -48,6 +48,11 @@ jobs:
           .\bin\julec test --compiler gcc -o test std/encoding/base64
           ./test
 
+      - name: Test - std/encoding/csv
+        run: |
+          .\bin\julec test --compiler gcc -o test std/encoding/csv
+          ./test
+
       - name: Test - std/encoding/json
         run: |
           .\bin\julec test --compiler gcc -o test std/encoding/json
