ci/cd: update compile command to latest

--- a/.github/workflows/build_gcc_macos.yml
+++ b/.github/workflows/build_gcc_macos.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Build JuleC
         run: |
           julec --compiler gcc --compiler-path g++-13 -t src/julec
-          g++-13 -w -fwrapv -ffloat-store --std=c++17 -O0 -Wl,-ld_classic dist/ir.cpp
+          g++-13 -w -fwrapv -ffloat-store --std=c++17 -O0 -fno-strict-aliasing -Wl,-ld_classic dist/ir.cpp
