tests: add enum tests

--- a/.github/workflows/tests_gcc_macos.yml
+++ b/.github/workflows/tests_gcc_macos.yml
@@ -59,6 +59,12 @@ jobs:
           g++-13 -w -fwrapv -ffloat-store --std=c++17 -O0 -fno-strict-aliasing -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
+      - name: Test - Enum
+        run: |
+          julec --compiler gcc --compiler-path g++-13 -o test -t tests/enum
+          g++-13 -w -fwrapv -ffloat-store --std=c++17 -O0 -fno-strict-aliasing -Wl,-ld_classic -o test dist/ir.cpp
+          ./test
+
       - name: Test - Exceptionals
         run: |
           julec --compiler gcc --compiler-path g++-13 -o test -t tests/exceptionals
