--- a/.github/workflows/tests_gcc_ubuntu.yml
+++ b/.github/workflows/tests_gcc_ubuntu.yml
@@ -51,6 +51,11 @@ jobs:
           julec --compiler gcc -o test tests/dynamic
           ./test
 
+      - name: Test - Enum
+        run: |
+          julec --compiler gcc -o test tests/enum
+          ./test
+
       - name: Test - Exceptionals
         run: |
           julec --compiler gcc -o test tests/exceptionals
