--- a/.github/workflows/tests_gcc_windows.yml
+++ b/.github/workflows/tests_gcc_windows.yml
@@ -51,6 +51,11 @@ jobs:
           .\bin\julec --compiler gcc -o test tests/dynamic
           ./test
 
+      - name: Test - Enum
+        run: |
+          .\bin\julec --compiler gcc -o test tests/enum
+          ./test
+
       - name: Test - Exceptionals
         run: |
           .\bin\julec --compiler gcc -o test tests/exceptionals
