--- a/.github/workflows/std_tests_clang_ubuntu.yml
+++ b/.github/workflows/std_tests_clang_ubuntu.yml
@@ -87,6 +87,11 @@ jobs:
           julec test --compiler clang -o test std/jule/constant/lit
           ./test
 
+      - name: Test - std/jule/sema
+        run: |
+          julec test --compiler clang -o test std/jule/sema
+          ./test
+
       - name: Test - std/maps
         run: |
           julec test --compiler clang -o test std/maps
