--- a/.github/workflows/std_tests_clang_windows.yml
+++ b/.github/workflows/std_tests_clang_windows.yml
@@ -87,6 +87,11 @@ jobs:
           .\bin\julec test --compiler clang -o test std/jule/constant/lit
           ./test
 
+      - name: Test - std/jule/sema
+        run: |
+          .\bin\julec test --compiler clang -o test std/jule/sema
+          ./test
+
       - name: Test - std/maps
         run: |
           .\bin\julec test --compiler clang -o test std/maps
