--- a/.github/workflows/std_tests_gcc_ubuntu.yml
+++ b/.github/workflows/std_tests_gcc_ubuntu.yml
@@ -83,6 +83,11 @@ jobs:
           julec test --compiler gcc -o test std/jule/constant/lit
           ./test
 
+      - name: Test - std/jule/sema
+        run: |
+          julec test --compiler gcc -o test std/jule/sema
+          ./test
+
       - name: Test - std/maps
         run: |
           julec test --compiler gcc -o test std/maps
