ci: fix Windows GCC tests for std

--- a/.github/workflows/tests_gcc_windows.yml
+++ b/.github/workflows/tests_gcc_windows.yml
@@ -14,7 +14,8 @@ jobs:
 
       - name: Test - Standard Library
         run: |
-          .\bin\julec --compiler gcc -o test tests/std
+          .\bin\julec --compiler gcc -to test tests/std
+          g++ -w -fwrapv -ffloat-store --std=c++17 -O0 -fno-strict-aliasing "-Wa,-mbig-obj" -o test.exe dist/ir.cpp -lws2_32 -lshell32
           ./test
 
       - name: Test - Aliasing
