--- a/_typos.toml
+++ b/_typos.toml
@@ -4,5 +4,5 @@
 extend-exclude = ["std/html/entity.jule"]
 
 [default]
-extend-words = { ue = "ue", nd = "nd", lok = "lok", Thm = "Thm", sur = "sur", leasure = "leasure", asure = "asure", nulll = "nulll", finf = "finf", iy = "iy", ERROR_FILENAME_EXCED_RANGE = "ERROR_FILENAME_EXCED_RANGE", FLE = "FLE", nam = "nam", ND = "ND", eis = "eis", inh = "inh", Vai = "Vai", VAI = "VAI", fo = "fo", hel = "hel", IST = "IST", Commun = "Commun", Ofr = "Ofr", becaus = "becaus", curren = "curren", infintie = "infintie", ofr = "ofr", olt = "olt", pluse = "pluse", pointint = "pointint", lates = "lates", isuses = "isuses", infinit = "infinit" }
+extend-words = { ue = "ue", nd = "nd", lok = "lok", Thm = "Thm", sur = "sur", leasure = "leasure", asure = "asure", nulll = "nulll", finf = "finf", iy = "iy", ERROR_FILENAME_EXCED_RANGE = "ERROR_FILENAME_EXCED_RANGE", FLE = "FLE", nam = "nam", ND = "ND", eis = "eis", inh = "inh", Vai = "Vai", VAI = "VAI", fo = "fo", hel = "hel", IST = "IST", Commun = "Commun", Ofr = "Ofr", becaus = "becaus", curren = "curren", infintie = "infintie", ofr = "ofr", olt = "olt", pluse = "pluse", pointint = "pointint", lates = "lates", isuses = "isuses", infinit = "infinit", typ = "typ" }
 extend-identifiers = { ERROR_FILENAME_EXCED_RANGE = "ERROR_FILENAME_EXCED_RANGE" }
