--- a/.github/workflows/tests_gcc_windows.yml
+++ b/.github/workflows/tests_gcc_windows.yml
@@ -37,6 +37,11 @@ jobs:
           .\bin\julec --compiler gcc -o test tests/channels
           ./test
 
+      - name: Test - Cmplx
+        run: |
+          .\bin\julec --compiler gcc -o test tests/cmplx
+          ./test
+
       - name: Test - Comptime
         run: |
           .\bin\julec --compiler gcc -o test tests/comptime
