--- a/.github/workflows/tests_clang_ubuntu.yml
+++ b/.github/workflows/tests_clang_ubuntu.yml
@@ -36,6 +36,11 @@ jobs:
           julec --compiler clang -o test tests/channels
           ./test
 
+      - name: Test - Cmplx
+        run: |
+          julec --compiler clang -o test tests/cmplx
+          ./test
+
       - name: Test - Comptime
         run: |
           julec --compiler clang -o test tests/comptime
