--- a/.github/workflows/tests_clang_windows.yml
+++ b/.github/workflows/tests_clang_windows.yml
@@ -36,6 +36,11 @@ jobs:
           .\bin\julec --compiler clang -o test tests/channels
           ./test
 
+      - name: Test - Cmplx
+        run: |
+          .\bin\julec --compiler clang -o test tests/cmplx
+          ./test
+
       - name: Test - Comptime
         run: |
           .\bin\julec --compiler clang -o test tests/comptime
