--- a/.github/workflows/tests_gcc_macos.yml
+++ b/.github/workflows/tests_gcc_macos.yml
@@ -41,6 +41,12 @@ jobs:
           g++-13 -w -fwrapv -ffloat-store --std=c++17 -O0 -fno-strict-aliasing -Wl,-ld_classic -o test dist/ir.cpp
           ./test
 
+      - name: Test - Cmplx
+        run: |
+          julec --compiler gcc --compiler-path g++-13 -o test -t tests/cmplx
+          g++-13 -w -fwrapv -ffloat-store --std=c++17 -O0 -fno-strict-aliasing -Wl,-ld_classic -o test dist/ir.cpp
+          ./test
+
       - name: Test - Comptime
         run: |
           julec --compiler gcc --compiler-path g++-13 -o test -t tests/comptime
